# Distributed-Risk-Engine

./: .dockerignore  .gitignore  Dockerfile  README.md  dashboard.py  docker-compose.yml  pyproject.toml  requirements.txt
src/risk_engine/: api.py  cli.py
src/risk_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/risk_engine/core/: data_loader.py  risk_metrics.py  simulator.py
web/: app.js  index.html  style.css
